Правки от Олега во время последнего прогона

--- a/index.html
+++ b/index.html
@@ -137,9 +137,10 @@
         <code>    .then(function onResolve(data) { ... })</code>
         <code>    .catch(function onReject() { ... })</code>
     </pre>
-    <img src="images/bluebird.png" alt="bluebird" style="position: absolute; right: 90px; top: 383px;"/>
-    <div style="margin-top: 75px;">
-        <a href="https://github.com/petkaantonov/bluebird">https://github.com/petkaantonov/bluebird</a>
+    <img src="images/bluebird.png" alt="bluebird" style="position: absolute; right: 90px; top: 400px;"/>
+    <div style="margin-top: 35px;">
+        <a href="https://github.com/petkaantonov/bluebird">https://github.com/petkaantonov/bluebird</a><br/>
+        <a href="https://vimeo.com/74925301">Михаил Давыдов "Promise – это не больно"</a>
     </div>
 </section>
 
@@ -411,14 +412,14 @@
     <h2><small>Generator.</small> Поддержка</h2>
 
     <ul>
-        <li>node >= 0.11 с флагом --harmony</li>
+        <li>node >=0.11 с флагом --harmony</li>
         <li>iojs</li>
         <li>Браузеры <a href="https://clck.ru/9VKMq">https://clck.ru/9VKMq</a>:
             <ul class="custom-list">
-                <li class="done">Chrome 39.0</li>
-                <li class="done">Firefox 26.0</li>
+                <li class="done">Chrome 39.0+</li>
+                <li class="done">Firefox 26.0+</li>
                 <li class="fail">IE (и Edge тоже)</li>
-                <li class="done">Opera 26</li>
+                <li class="done">Opera 26+</li>
                 <li class="fail">Safari</li>
             </ul>
         </li>
