--- a/index.html
+++ b/index.html
@@ -363,6 +363,95 @@
     </div>
 </section>
 
+<section class="slide cover w" style="text-align: center; ">
+    <img src="images/orderMaster.gif" alt="catIsSad" />
+</section>
+
+<section class="slide">
+    <h2><small>Generator.</small> Аналогия</h2>
+    <pre class="javascript">
+        <code>function *order() {</code>
+        <code>    yield 'Цезарь';</code>
+        <code>    yield 'Окрошка';</code>
+        <code>    yield 'Шоколадный кексик';</code>
+        <code>    yield 'Компот';</code>
+        <code>}</code>
+        <code> </code>
+        <code>var it = order(); // Подходит официант</code>
+        <code>it.next(); // " - Что будете заказывать?"</code>
+    </pre>
+</section>
+
+<section class="slide">
+    <h2><small>Generator.</small> Аналогия</h2>
+    <pre class="javascript">
+        <code>function *order() {</code>
+        <code>    yield 'Цезарь';</code>
+        <code>    yield 'Окрошка';</code>
+        <code>    yield 'Шоколадный кексик';</code>
+        <code>    yield 'Компот';</code>
+        <code>}</code>
+        <code> </code>
+        <code>var it = order(); // Подходит официант</code>
+        <code>it.next(); // " - Что будете заказывать?"</code>
+        <code>it.next(); // " - Хорошо"</code>
+    </pre>
+</section>
+
+<section class="slide">
+    <h2><small>Generator.</small> Аналогия</h2>
+    <pre class="javascript">
+        <code>function *order() {</code>
+        <code>    yield 'Цезарь';</code>
+        <code>    yield 'Окрошка';</code>
+        <code>    yield 'Шоколадный кексик';</code>
+        <code>    yield 'Компот';</code>
+        <code>}</code>
+        <code> </code>
+        <code>var it = order(); // Подходит официант</code>
+        <code>it.next(); // " - Что будете заказывать?"</code>
+        <code>it.next(); // " - Хорошо"</code>
+        <code>it.next(); // " - Что нибудь еще?"</code>
+    </pre>
+</section>
+
+<section class="slide">
+    <h2><small>Generator.</small> Аналогия</h2>
+    <pre class="javascript">
+        <code>function *order() {</code>
+        <code>    yield 'Цезарь';</code>
+        <code>    yield 'Окрошка';</code>
+        <code>    yield 'Шоколадный кексик';</code>
+        <code>    yield 'Компот';</code>
+        <code>}</code>
+        <code> </code>
+        <code>var it = order(); // Подходит официант</code>
+        <code>it.next(); // " - Что будете заказывать?"</code>
+        <code>it.next(); // " - Хорошо"</code>
+        <code>it.next(); // " - Что нибудь еще?"</code>
+        <code>it.next(); // " - Пить что будете?"</code>
+    </pre>
+</section>
+
+<section class="slide">
+    <h2><small>Generator.</small> Аналогия</h2>
+    <pre class="javascript">
+        <code>function *order() {</code>
+        <code>    yield 'Цезарь';</code>
+        <code>    yield 'Окрошка';</code>
+        <code>    yield 'Шоколадный кексик';</code>
+        <code>    yield 'Компот';</code>
+        <code>}</code>
+        <code> </code>
+        <code>var it = order(); // Подходит официант</code>
+        <code>it.next(); // " - Что будете заказывать?"</code>
+        <code>it.next(); // " - Хорошо"</code>
+        <code>it.next(); // " - Что нибудь еще?"</code>
+        <code>it.next(); // " - Пить что будете?"</code>
+        <code>it.next(); // " - Все"</code>
+    </pre>
+</section>
+
 <section class="slide">
     <h2>Generator</h2>
     <pre class="javascript">
@@ -456,8 +545,11 @@
 </section>
 
 <section class="slide cover w" style="text-align: center; ">
-    <img src="images/happyCat.jpg" alt="happyCat"/>
     <h2>Спасибо за внимание!</h2>
+    <ul>
+        <li>zhigalov@yandex-team.ru</li>
+        <li>@sergey_zhigalov</li>
+    </ul>
 </section>
 
 <div class="progress">
