--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Generators</h2>
         <div class="info">
             <p class="author"><span class="first-red">С</span>ергей Жигалов</p>
-            <p class="location">EkbJS, 2015г</p>
+            <p class="location">ChelyJS, 2015г</p>
         </div>
     </div>
 </section>
@@ -127,15 +127,16 @@
 <section class="slide">
     <h2><small>Promises.</small> Bluebird</h2>
     <pre class="javascript">
+        <code>function myFunction(arg1, arg2, cb) {</code>
+        <code>    cb(err, data);</code>
+        <code>}</code>
+        <code>var myPromisifyFunction = Promise.promisify(myFunction);</code>
+        <code> </code>
         <code>myPromise()</code>
         <code>    .then(function onResolve() { return data; })</code>
         <code>    .then(function onResolve(data) { ... })</code>
         <code>    .catch(function onReject() { ... })</code>
         <code> </code>
-        <code>function myFunction(arg1, arg2, cb) {</code>
-        <code>    cb(err, data);</code>
-        <code>}</code>
-        <code>var myPromisifyFunction = Promise.promisify(myFunction);</code>
     </pre>
     <img src="images/bluebird.png" alt="bluebird" style="position: absolute; right: 40px; top: 26px;"/>
     <div style="margin-top: 35px;">
@@ -157,24 +158,6 @@
         <code>        })</code>
         <code>        .then(function (data) {</code>
         <code>            return filterUnpaidFines(data.fines, data.isUnpaidFines);</code>
-        <code>        });</code>
-        <code>}</code>
-    </pre>
-</section>
-
-<section class="slide">
-    <h2>Promises</h2>
-    <pre class="javascript">
-        <code>function getUnpaidFines(<mark>Ввести номер автомобиля</mark>) {</code>
-        <code>    return <mark>Получить список штрафов</mark>(carNumber)</code>
-        <code>        .then(function (fines) {</code>
-        <code>            return Promise.props({</code>
-        <code>                fines: fines,</code>
-        <code>                isUnpaidFines: Promise.all(<mark>Получить статус оплаты</mark>)</code>
-        <code>            });</code>
-        <code>        })</code>
-        <code>        .then(function (data) {</code>
-        <code>            return <mark>Вывести неоплаченные штрафы</mark>(...);</code>
         <code>        });</code>
         <code>}</code>
     </pre>
@@ -212,6 +195,17 @@
         <code>function getUnpaidFines(carNumber) {</code>
         <code>    var fines = getFinesByCarNumber(carNumber);</code>
         <code>    var isUnpaidFines = fines.map(isFineUnpaid);</code>
+        <code>    return filterUnpaidFines(fines, isUnpaidFines);</code>
+        <code>}</code>
+    </pre>
+</section>
+
+<section class="slide">
+    <h2><small>Мой идеальный код.</small> Generator</h2>
+    <pre class="javascript">
+        <code>function getUnpaidFines(carNumber) {</code>
+        <code>    var fines = <mark>yield</mark> getFinesByCarNumber(carNumber);</code>
+        <code>    var isUnpaidFines = <mark>yield</mark> fines.map(isFineUnpaid);</code>
         <code>    return filterUnpaidFines(fines, isUnpaidFines);</code>
         <code>}</code>
     </pre>
@@ -271,7 +265,7 @@
         <code>    console.log('Hello, ' + name);</code>
         <code>}</code>
         <code> </code>
-        <code>foo('EkbJS');</code>
+        <code>foo('ChelyJS');</code>
     </pre>
 
     <div class="console_port">
@@ -304,14 +298,14 @@
         <code>    console.log('Hello, ' + name);</code>
         <code>}</code>
         <code> </code>
-        <code>var it = foo('EkbJS');</code>
+        <code>var it = foo('ChelyJS');</code>
         <code>it.next();</code>
     </pre>
 
     <div class="console_port">
         <h3>Console:</h3>
         <pre class="console">
-            <code>&gt; Hello, EkbJS</code>
+            <code>&gt; Hello, ChelyJS</code>
         </pre>
     </div>
 </section>
@@ -361,10 +355,6 @@
             <code>&gt; {value: undefined, done: true}</code>
         </pre>
     </div>
-</section>
-
-<section class="slide cover w" style="text-align: center; ">
-    <img class="myGif" src="images/orderMaster.gif" alt="catIsSad" />
 </section>
 
 <section class="slide">
@@ -477,7 +467,7 @@
         <code>    var value = yield Promise.resolve(true);</code>
         <code>    return value;</code>
         <code>}).then(function (value) {</code>
-        <code>    console.log(value);</code>
+        <code>    console.log(value); // true</code>
         <code>});</code>
     </pre>
 </section>
@@ -531,6 +521,15 @@
                 <li>WebStorm</li>
             </ul>
         </li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Альтернативные фреймворки</h2>
+    <ul>
+        <li><a href="http://expressjs.com/">Express</a> -> <a href="http://koajs.com/">Koa</a></li>
+        <li><a href="http://mochajs.org/">mocha</a> -> <a href="https://github.com/blakeembrey/co-mocha">co-mocha</a></li>
+        <li>...</li>
     </ul>
 </section>
 
