Rename to ChellyJS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Generators</h2>
         <div class="info">
             <p class="author"><span class="first-red">С</span>ергей Жигалов</p>
-            <p class="location">ChelyJS, 2015г</p>
+            <p class="location">ChellyJS, 2015г</p>
         </div>
     </div>
 </section>
@@ -265,7 +265,7 @@
         <code>    console.log('Hello, ' + name);</code>
         <code>}</code>
         <code> </code>
-        <code>foo('ChelyJS');</code>
+        <code>foo('ChellyJS');</code>
     </pre>
 
     <div class="console_port">
@@ -298,14 +298,14 @@
         <code>    console.log('Hello, ' + name);</code>
         <code>}</code>
         <code> </code>
-        <code>var it = foo('ChelyJS');</code>
+        <code>var it = foo('ChellyJS');</code>
         <code>it.next();</code>
     </pre>
 
     <div class="console_port">
         <h3>Console:</h3>
         <pre class="console">
-            <code>&gt; Hello, ChelyJS</code>
+            <code>&gt; Hello, ChellyJS</code>
         </pre>
     </div>
 </section>
